--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ LINE Pay：
           <label><input type="radio" name="q4" value="correct" /> B1</label><br />
           <label><input type="radio" name="q4" value="wrong" /> 當作沒看到</label><br />
           <label><input type="radio" name="q4" value="wrong" /> 問正值</label><br>
+          <label><input type="radio" name="q4" value="wrong" /> 全聯福利中心</label><br>
         </li>
         <li>
           星期幾不用倒垃圾
@@ -312,26 +313,28 @@ LINE Pay：
           <label><input type="radio" name="q5" value="wrong" /> 1</label><br />
           <label><input type="radio" name="q5" value="correct" /> 3</label><br />
           <label><input type="radio" name="q5" value="wrong" /> 5</label><br>
+          <label><input type="radio" name="q5" value="wrong" /> 8</label><br>
         </li>
         <li>
           如何結帳(算錢)
           <br />
           <label><input type="radio" name="q6" value="wrong" /> *臨櫃繳費+LINE pay繳費</label><br />
           <label><input type="radio" name="q6" value="correct" /> *臨櫃繳費+{收據} - *臨櫃退費</label><br />
-          <label><input type="radio" name="q6" value="wrong" /> 請正值過來算</label><br>
+          <label><input type="radio" name="q6" value="wrong" /> 請正值過來，並大聲呼叫:請支援收銀</label><br>
         </li>
         <li>
     LINE Pay 繳費時，需要額外做什麼？
     <br />
     <label><input type="radio" name="q7" value="wrong" /> 寫團報單</label><br />
-    <label><input type="radio" name="q7" value="wrong" /> 填退費資料</label><br />
+    <label><input type="radio" name="q7" value="wrong" /> 跟客人要ig以便後續聯絡</label><br />
     <label><input type="radio" name="q7" value="correct" /> 輸入代碼</label><br />
   </li>
   <li>
-    若非課程未開成，退費應依據哪一項？
+    若成功開課後，學員退費應依據哪一項？
     <br />
     <label><input type="radio" name="q8" value="wrong" /> 正值個人判斷</label><br />
     <label><input type="radio" name="q8" value="correct" /> 收據背面規定</label><br />
+    <label><input type="radio" name="q8" value="wrong" /> PIMS個人資料管理規範</label><br />
     <label><input type="radio" name="q8" value="wrong" /> 學友提出理由即可</label><br />
   </li>
   <li>
@@ -339,13 +342,14 @@ LINE Pay：
     <br />
     <label><input type="radio" name="q9" value="wrong" /> 5人</label><br />
     <label><input type="radio" name="q9" value="correct" /> 10人</label><br />
-    <label><input type="radio" name="q9" value="wrong" /> 無限制</label><br />
+    <label><input type="radio" name="q9" value="wrong" /> 班長說的算</label><br />
   </li>
    <li>
     哪一種類型的課程不需要白板筆？
     <br />
-    <label><input type="radio" name="q10" value="wrong" /> 語文</label><br />
+    <label><input type="radio" name="q10" value="wrong" /> 射箭</label><br />
     <label><input type="radio" name="q10" value="correct" /> 運動</label><br />
+    <label><input type="radio" name="q10" value="wrong" /> 烹飪</label><br />
     <label><input type="radio" name="q10" value="wrong" /> 文創</label><br />
   </li>
       </ol>
