--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ footer{
     <p>請先閱讀以下說明後點選「確認」以進入內容。</p>
     <ol style="text-align: left;">
         <li>如果工作久了發現有更快的工作方式，可自行改變流程</li>
-        <li>離開櫃台去其他地方要先告知正值</li>
-        <li>以下內容為個人工作經驗，若與正值交代內容發生衝突，請以正值為主(不然我可能會被約談QAQ)</li>
-        <li>千萬不要拿這個網頁裡的內容頂撞正值，我真的會怕哈哈哈哈</li>
+        <li>離開櫃台去其他地方要先告知正職</li>
+        <li>以下內容為個人工作經驗，若與正職交代內容發生衝突，請以正職為主(不然我可能會被約談QAQ)</li>
+        <li>千萬不要拿這個網頁裡的內容頂撞正職，我真的會怕哈哈哈哈</li>
     </ol>
     <button onclick="closeOverlay()">確認</button>
   </div>
@@ -192,13 +192,13 @@ footer{
 - 檢查教室冷氣、桌面、椅子、抽屜、白板
 - 運動教室檢查地板與瑜珈用品
 
-6:10 出發倒垃圾（一定要準時，並向正值報告）
+6:10 出發倒垃圾（一定要準時，並向正職報告）
 - 1、5 沒有回收車；2、4、6 有回收車
 - 星期三沒有垃圾車
 
 9:00 結帳（確認金額正確）
 - 公式：*臨櫃繳費+{收據} - *臨櫃退費
-- 將交班報表、日報表、現金、{收據}、{退費單} 裝袋交給正值
+- 將交班報表、日報表、現金、{收據}、{退費單} 裝袋交給正職
     </pre>
 
     <h2 id="check">🏫 教室整理與檢查</h2>
@@ -239,7 +239,7 @@ LINE Pay：
 2. 系統選擇「100%退全額」
 3. 點選「臨櫃退費」> 列印退費單
 4. 請學友填寫退費資料 > 收回退費單並退還金額
-補充說明： 若非停課，依收據背面規定退費，若有疑問請問正值
+補充說明： 若非停課，依收據背面規定退費，若有疑問請問正職
 
 轉班流程：
 轉班流程為一退一進，需要先退費再報名
@@ -248,7 +248,7 @@ LINE Pay：
 3. 收補差價或退回多餘款項
     </pre>
 
-    <h2 id="group">👥 團報(不熟悉一定要詢問正值)</h2>
+    <h2 id="group">👥 團報(不熟悉一定要詢問正職)</h2>
     <pre>
 紙本處理：
 1. 計算正確金額
@@ -304,7 +304,7 @@ LINE Pay：
           <br />
           <label><input type="radio" name="q4" value="correct" /> B1</label><br />
           <label><input type="radio" name="q4" value="wrong" /> 當作沒看到</label><br />
-          <label><input type="radio" name="q4" value="wrong" /> 問正值</label><br>
+          <label><input type="radio" name="q4" value="wrong" /> 問正職</label><br>
           <label><input type="radio" name="q4" value="wrong" /> 全聯福利中心</label><br>
         </li>
         <li>
@@ -320,7 +320,7 @@ LINE Pay：
           <br />
           <label><input type="radio" name="q6" value="wrong" /> *臨櫃繳費+LINE pay繳費</label><br />
           <label><input type="radio" name="q6" value="correct" /> *臨櫃繳費+{收據} - *臨櫃退費</label><br />
-          <label><input type="radio" name="q6" value="wrong" /> 請正值過來，並大聲呼叫:請支援收銀</label><br>
+          <label><input type="radio" name="q6" value="wrong" /> 請正職過來，並大聲呼叫:請支援收銀</label><br>
         </li>
         <li>
     LINE Pay 繳費時，需要額外做什麼？
@@ -332,7 +332,7 @@ LINE Pay：
   <li>
     若成功開課後，學員退費應依據哪一項？
     <br />
-    <label><input type="radio" name="q8" value="wrong" /> 正值個人判斷</label><br />
+    <label><input type="radio" name="q8" value="wrong" /> 正職個人判斷</label><br />
     <label><input type="radio" name="q8" value="correct" /> 收據背面規定</label><br />
     <label><input type="radio" name="q8" value="wrong" /> PIMS個人資料管理規範</label><br />
     <label><input type="radio" name="q8" value="wrong" /> 學友提出理由即可</label><br />
