--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@ LINE Pay：
 💻 系統入帳
 1.確認紙本金額正確
 2.先幫班長報名：
-    ● 選課、折扣、報名 → 臨櫃繳費 → 印刷收據（如需）
+    ● 選課、折扣、報名 → 臨櫃繳費 → 列印收據（如需）
     ● 在紙本團報單班長欄位打勾
 3其他學友報名：
-    ● 入資料→課程代號、折扣代號 → + →確認報名 → 臨櫃繳費 → 印刷收據
+    ● 入資料→課程代號、折扣代號 → + →確認報名 → 臨櫃繳費 → 列印收據
     ● 重複至全部報名完畢
-⚠️只有已繳費的學友才能進入系統
+⚠️只有已繳費的學友才能入系統
     </pre>
 
     <h2 id="phone">📞 電話開頭用語</h2>
     <pre>
-接電話：救國團你好，敝姓○○，很高興為您服務
+接電話：救國團你好，敝姓○，很高興為您服務
 打電話：你好，這裡是新竹救國團
     </pre>
 
