--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ LINE Pay：
           垃圾袋或清潔用品用完了要去哪裡拿
           <br />
           <label><input type="radio" name="q4" value="correct" /> B1</label><br />
-          <label><input type="radio" name="q4" value="wrong" /> 當作沒看到</label><br />
+          <label><input onclick="alert('你良心過得去嗎')"  type="radio" name="q4" value="wrong" /> 當作沒看到</label><br />
           <label><input type="radio" name="q4" value="wrong" /> 問正職</label><br>
           <label><input type="radio" name="q4" value="wrong" /> 全聯福利中心</label><br>
         </li>
@@ -320,7 +320,7 @@ LINE Pay：
           <br />
           <label><input type="radio" name="q6" value="wrong" /> *臨櫃繳費+LINE pay繳費</label><br />
           <label><input type="radio" name="q6" value="correct" /> *臨櫃繳費+{收據} - *臨櫃退費</label><br />
-          <label><input type="radio" name="q6" value="wrong" /> 請正職過來，並大聲呼叫:請支援收銀</label><br>
+          <label><input onclick="alert('你確定這樣對嗎')"  type="radio" name="q6" value="wrong" /> 請正職過來，並大聲呼叫:請支援收銀</label><br>
         </li>
         <li>
     LINE Pay 繳費時，需要額外做什麼？
